tests/snapshots/cli__friends.snap
---
source: tests/cli.rs
expression: help
---
Inspect visible friend lists and manage active-account friendships

Usage: friends <COMMAND>

Commands:
  list    List visible friends of the active account or another personal profile
  add     Send or accept a friend request according to the current relationship
  remove  Remove a friend or cancel an outgoing friend request
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
