tests/snapshots/cli__pay.snap
---
source: tests/cli.rs
expression: help
---
Pay one person

Usage: pay [OPTIONS] --note <NOTE> <USERNAME> <AMOUNT>

Arguments:
  <USERNAME>
          Exact username with an optional leading @

  <AMOUNT>
          Positive USD amount with at most two fractional digits

Options:
      --note <NOTE>
          Non-empty payment note

      --visibility <VISIBILITY>
          Visibility of the created payment

          [default: private]
          [possible values: private, friends, public]

      --yes
          Skip only the final default-No confirmation

  -h, --help
          Print help (see a summary with '-h')

Financial exit code 3 means the payment outcome must be verified independently. Do not retry; check `activity list` and the official Venmo app.
