tests/snapshots/cli__pay_methods.snap
---
source: tests/cli.rs
expression: help
---
List payment methods and copyable IDs

Usage: methods

Options:
  -h, --help
          Print help
