tests/snapshots/cli__pay_options.snap
---
source: tests/cli.rs
expression: help
---
List payment options and copyable source IDs

Usage: options

Options:
  -h, --help
          Print help
