tests/snapshots/cli__payment_methods.snap
---
source: tests/cli.rs
expression: help
---
Inspect available payment methods

Usage: payment-methods <COMMAND>

Commands:
  list  List payment methods and copyable IDs
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
