tests/snapshots/cli__payment_methods_list.snap
---
source: tests/cli.rs
expression: help
---
List payment methods and copyable IDs

Usage: list

Options:
  -h, --help
          Print help
