tests/snapshots/cli__request.snap
---
source: tests/cli.rs
expression: help
---
Request money from one person or accept an incoming request

Usage: request --note <NOTE> <RECIPIENT> <AMOUNT>
       request accept [OPTIONS] <REQUEST_ID>
       request help [COMMAND]...

Arguments:
  <RECIPIENT>
          Exact @username or positive numeric Venmo user ID

  <AMOUNT>
          Positive USD amount with at most two fractional digits

Options:
      --note <NOTE>
          Non-empty request note

  -h, --help
          Print help

request accept:
Pay and settle one existing incoming request
      --from <METHOD_ID>
          Payment-method ID shown by `payment-methods list`

      --yes
          Skip only the final default-No confirmation

  -h, --help
          Print help

  <REQUEST_ID>
          Canonical incoming request ID

request help:
Print this message or the help of the given subcommand(s)
  [COMMAND]...
          Print help for the subcommand(s)
