tests/snapshots/cli__request_accept.snap
---
source: tests/cli.rs
expression: help
---
Reserved request-acceptance syntax; this operation is unavailable

Usage: accept [OPTIONS] <REQUEST_ID>

Arguments:
  <REQUEST_ID>
          Canonical incoming request ID

Options:
      --from <METHOD_ID>
          Preferred external/backup method ID; Venmo balance may be used first

      --yes
          Skip only the final default-No confirmation

  -h, --help
          Print help
